src/network/access/qnetworkaccessmanager.h
@@ -208,8 +208,6 @@ private:
     friend class QNetworkReplyWasmImpl;
 #endif
     Q_DECLARE_PRIVATE(QNetworkAccessManager)
-    Q_PRIVATE_SLOT(d_func(), void _q_replyFinished())
-    Q_PRIVATE_SLOT(d_func(), void _q_replyEncrypted())
     Q_PRIVATE_SLOT(d_func(), void _q_replySslErrors(QList<QSslError>))
     Q_PRIVATE_SLOT(d_func(), void _q_replyPreSharedKeyAuthenticationRequired(QSslPreSharedKeyAuthenticator*))
 #ifndef QT_NO_BEARERMANAGEMENT
